src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidMergeDiffTemplates/ValidExample1.liquid
{% mergeDiff msg -%}
{
  "id" : "1",
  "data" : "newData",
  "resourceType" : "newType",
  "extension" : "",
  "extension" : "replace"
}
{% endmergeDiff -%}